--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
-<!-- <div class="container"> -->
 <!-- <p>app works!</p> -->
-<router-outlet></router-outlet>
-
-<!-- </div> -->
+<!-- <header></header> -->
+<div class="container-fluid">
+    <router-outlet></router-outlet>
+</div>
+<!-- <footer></footer> -->
