--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,6 @@
     --igsBlack:#333333;
 }
 
-.body{
-    background-color: var(--igsMediumGray);
+body{
+    background: var(--igsMediumGray);
 }
