--- a/src/app/books/books-list/books-list.component.scss
+++ b/src/app/books/books-list/books-list.component.scss
@@ -53,10 +53,8 @@
 .container {
 
     margin-top: 20px;
-    // border: 1px solid red;
-    padding: 0;
-
-    .books-list {
+    
+    .book-cards-list {
         margin           : 10px 0px;
 
         ul {
@@ -64,6 +62,7 @@
             display       : flex;
             flex-direction: row;
             flex-wrap     : wrap;
+            justify-content: center;
             padding       : 2px;
 
             .book-card {
