--- a/src/app/books/books-start/books-start.component.scss
+++ b/src/app/books/books-start/books-start.component.scss
@@ -1,10 +1,8 @@
 .container {
-    .row {
-        padding: 10px;
-    }
 
     .heading {
         // border: 1px solid black;
+        margin: 0px 10px;
         padding: 10px;
 
         p {
@@ -23,6 +21,8 @@
         // border: 1px solid black;
         display  : flex;
         flex-wrap: wrap;
+        flex-direction: row;
+        width: 100vw;
 
         .card {
             // border: 1px solid green;
