getting rid of the jQuery

--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -51,7 +51,7 @@
                 <p class="author"> {{getDisplayNameOfAuthor(book.authors)}}</p>
             </li>
         </ul>
-        <div class="load-more" id="loadMoreSpinner" >
+        <div class="load-more" id="loadMoreSpinner" #loadMoreSpinner >
         </div>
     </div>
 </div>
