adding css for book title

--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -47,7 +47,7 @@
                 <p>
                     <img src="{{getImageUrl(i)}}" loading="lazy" alt="book-cover">
                 </p>
-                <p class="title"> {{getDisplayTitleOfBook(book.title)}}</p>
+                <p class="title"> {{book.title}}</p>
                 <p class="author"> {{getDisplayNameOfAuthor(book.authors)}}</p>
             </li>
         </ul>
