--- a/src/app/books/books-list/books-list.component.scss
+++ b/src/app/books/books-list/books-list.component.scss
@@ -95,6 +95,10 @@
 
                 p.title {
                     text-transform: uppercase;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2;
+                    overflow: hidden;
                 }
 
                 p.author {
