--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -1,54 +1,61 @@
-.heading{
-    border: 1px solid black;
-    display: flex;
+.heading {
+    // border: 1px solid black;
+    display        : flex;
     justify-content: space-between;
-    align-items: center;
-    padding:10px;
+    align-items    : center;
+    padding        : 10px;
 
-    .left{
-        border: 1px solid red;
+    .left {
+        // border: 1px solid red;
     }
-    
-    .right{
-        border: 1px solid blue;
+
+    .right {
+        // border: 1px solid blue;
         display: flex;
-        
-        i{
-            padding:10px;
+
+        i {
+            padding: 10px;
         }
     }
 }
 
-.add-new{
+.add-new {
     // border: 1px solid red;
-    display: flex;
+    display        : flex;
     justify-content: space-between;
 
-    .left{
-        display: flex;
+    .left {
+        display        : flex;
         justify-content: center;
-        align-items: center;
-        // border: 1px solid blue;
+        align-items    : center;
+        transition: .5s;
+        // border         : 1px solid blue;
 
-        div{
+        &:hover {
+            cursor: pointer;
+            border-radius: 10px;
+            background   : var(--igsDarkgray);
+        }
+
+        div {
             padding: 10px;
         }
-        
-        .take-note p{
+
+        .take-note p {
             // border: 1px solid red;
             margin-bottom: 0;
             // padding: 0px 5px;
         }
-        
+
     }
-    
-    .right{
+
+    .right {
         display: flex;
-        padding:10px;
+        padding: 10px;
     }
 
 
-    i{
+    i {
         font-size: 1.5rem;
     }
 }
