done with layout

--- a/src/app/keep/cards-list/card-item/card-item.component.html
+++ b/src/app/keep/cards-list/card-item/card-item.component.html
@@ -1,1 +1,14 @@
 <p>card-item works!</p>
+<div class="card-item">
+    <div class="card-top">
+        <p><input type="text" placeholder="title" ></p>
+        <div class="icons">
+            <i class="fa fa-trash" aria-hidden="true"></i>
+            <i class="fa fa-thumb-tack" aria-hidden="true"></i>
+        </div>
+    </div>
+    <textarea></textarea>
+    <div>
+        <button class="btn btn-default">Done</button>
+    </div>
+</div>
