--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -1,23 +1,32 @@
 <p>notes-start works!</p>
-<div class="heading">
-    <div class="left">
-        <div class="title">KEEP Notes</div>
-    </div>
-    <div class="right">
-        <div><i class="fa fa-search" aria-hidden="true"></i></div>
-        <div><i class="fa fa-external-link" aria-hidden="true"></i></div>
-        <div><i class="fa fa-times" aria-hidden="true"></i></div>
-    </div>
-</div>
-
-<div class="add-new">
-    <div class="left">
-        <div><i class="fa fa-plus-square-o" aria-hidden="true"></i></div>
-        <div class="take-note">
-            <p>Take a note...</p>
+<div class="container">
+    <div class="heading">
+        <div class="left">
+            <div class="title">KEEP Notes</div>
+        </div>
+        <div class="right">
+            <div><i class="fa fa-search" aria-hidden="true"></i></div>
+            <div><i class="fa fa-external-link" aria-hidden="true"></i></div>
+            <div><i class="fa fa-times" aria-hidden="true"></i></div>
         </div>
     </div>
-    <div class="right">
-        <div><i class="fa fa-check-square" aria-hidden="true"></i></div>
+    
+    <div class="add-new">
+        <div class="left" (click)="onAddEmptyCard()" >
+            <div><i class="fa fa-plus-square-o" aria-hidden="true"></i></div>
+            <div class="take-note">
+                <p>Take a note...</p>
+            </div>
+        </div>
+        <div class="right">
+            <div><i class="fa fa-check-square" aria-hidden="true"></i></div>
+        </div>
     </div>
+    
+    <div class="cards-container">
+        <div class="cards-list">
+            <app-cards-list [cardsList]="emptyCardsList" ></app-cards-list>
+        </div>
+    </div>
+    <app-card-item></app-card-item>
 </div>
