--- a/src/app/keep/cards-list/card-item/card-item.component.html
+++ b/src/app/keep/cards-list/card-item/card-item.component.html
@@ -1,4 +1,4 @@
-<p>card-item works!</p>
+<!-- <p>card-item works!</p> -->
 <div class="card-item">
     <div class="card-top">
         <p><input type="text" placeholder="title" ></p>
