--- a/src/app/keep/cards-list/cards-list.component.html
+++ b/src/app/keep/cards-list/cards-list.component.html
@@ -1,4 +1,4 @@
-<p>cards-list works!</p>
+<!-- <p>cards-list works!</p> -->
 
 <div *ngFor="let card of cardsList" >
     <app-card-item [cardItem]="card" ></app-card-item>
