--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -1,4 +1,4 @@
-<p>notes-start works!</p>
+<!-- <p>notes-start works!</p> -->
 <div class="container">
     <div class="heading">
         <div class="left">
@@ -28,5 +28,5 @@
             <app-cards-list [cardsList]="emptyCardsList" ></app-cards-list>
         </div>
     </div>
-    <app-card-item></app-card-item>
+    <!-- <app-card-item></app-card-item> -->
 </div>
