--- a/src/app/keep/cards-list/card-item/card-item.component.scss
+++ b/src/app/keep/cards-list/card-item/card-item.component.scss
@@ -1,5 +1,5 @@
 .card-item{
-    border: 1px solid black;
+    border: 1px solid black; /*important*/
     display: flex;
     flex-flow: column nowrap;
     // justify-content: space-evenly;
@@ -7,6 +7,7 @@
     height: 150px;
     width: 400px;
     padding: 2px;
+    margin: 10px 0;
 
     p{
         margin-bottom: 0;
@@ -31,6 +32,7 @@
     }
     textarea{
         border: none;
+        resize: none;
         background: var(--igsDarkgrey);
         width: 100%;
         height: 100%;
