--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -1,3 +1,7 @@
+.container{
+    // border: 1px solid black;
+    margin: 10px;
+}
 .heading {
     // border: 1px solid black;
     display        : flex;
