--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -10,7 +10,7 @@
     padding        : 10px;
 
     .left {
-        // border: 1px solid red;
+        border: 1px solid red;
     }
 
     .right {
