creating new layout

--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -28,4 +28,15 @@
         </div>
     </div>
     <!-- <app-card-item></app-card-item> -->
+    <div class="note-item">
+        <div class="title">
+            <input type="text" placeholder="title" >
+        </div>
+        <div class="description">
+            <textarea></textarea>
+        </div>
+        <div class="bottom">
+            <button class="btn btn-default">Done</button>
+        </div>
+    </div>
 </div>
