--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -23,20 +23,25 @@
         </div>
     </div>
     
-    <div class="cards-container">
-        <div class="cards-list">
-        </div>
-    </div>
     <!-- <app-card-item></app-card-item> -->
-    <div class="note-item">
-        <div class="title">
-            <input type="text" placeholder="title" >
-        </div>
-        <div class="description">
-            <textarea></textarea>
-        </div>
-        <div class="bottom">
-            <button class="btn btn-default">Done</button>
+    <div *ngFor="let note of notesList">
+        <!-- <p>new note</p> -->
+        <div class="note-item">
+            <div class="top">
+                <div class="title">
+                    <input type="text" placeholder="title" >
+                </div>
+                <div class="icons">
+                    <i class="fa fa-trash" (click)="onDelete(note)" ></i>
+                    <i class="fa fa-thumb-tack"></i>
+                </div>
+            </div>
+            <div class="description">
+                <textarea></textarea>
+            </div>
+            <div class="bottom">
+                <button class="btn btn-default">Done</button>
+            </div>
         </div>
     </div>
 </div>
