--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -22,6 +22,7 @@
 
         i {
             padding: 10px;
+            font-size: 1rem;
         }
     }
 }
@@ -31,16 +32,20 @@
     display        : flex;
     justify-content: space-between;
 
+    i{
+        font-size: 1.5rem;
+    }
+
     .left {
         display        : flex;
         justify-content: center;
         align-items    : center;
+        border-radius: 10px;
         transition: .5s;
         // border         : 1px solid blue;
 
         &:hover {
             cursor: pointer;
-            border-radius: 10px;
             background   : var(--igsDarkgray);
         }
 
@@ -54,21 +59,18 @@
             // padding: 0px 5px;
         }
 
+        
     }
-
+    
     .right {
         display: flex;
         padding: 10px;
     }
-
-
-    i {
-        font-size: 1.5rem;
-    }
 }
 
 .note-item{
-    // border: 1px solid blue;
+    border: 1px solid lightgray;
+    border-radius: 10px;
     margin: 10px 0;
     padding: 10px;
 
@@ -77,11 +79,21 @@
 
     }
 
-    .title input{
-        border: none;
+    .top{
+        display: flex;
+        justify-content: space-between;
+        
+        .title input{
+            border: none;
+    
+            &:focus{
+                outline: none;
+            }
+        }
 
-        &:focus{
-            outline: none;
+        .icons i{
+            margin: 0 5px;
+            font-size: 1.5rem;
         }
     }
     
