--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -10,9 +10,9 @@
             <div><i class="fa fa-times" aria-hidden="true"></i></div>
         </div>
     </div>
-    
+
     <div class="add-new">
-        <div class="left" (click)="onAddEmptyCard()" >
+        <div class="left" (click)="onAddEmptyNote()">
             <div><i class="fa fa-plus-square-o" aria-hidden="true"></i></div>
             <div class="take-note">
                 <p>Take a note...</p>
@@ -22,18 +22,22 @@
             <div><i class="fa fa-check-square" aria-hidden="true"></i></div>
         </div>
     </div>
-    
+    <button class="btn btn-success" (click)="onSaveClick()" >Save</button>
+
     <!-- <app-card-item></app-card-item> -->
     <div *ngFor="let note of notesList">
         <!-- <p>new note</p> -->
         <div class="note-item">
             <div class="top">
                 <div class="title">
-                    <input type="text" placeholder="title" >
+                    <input type="text" placeholder="title">
                 </div>
                 <div class="icons">
-                    <i class="fa fa-trash" (click)="onDelete(note)" ></i>
-                    <i class="fa fa-thumb-tack"></i>
+                    <i class="fa fa-trash" (click)="onDelete(note)"></i>
+                    <i [ngStyle]="{color:note.isPinned?'#1a73e8':null}" 
+                    class="fa fa-thumb-tack"
+                    (click)="onPinClick(note)"
+                    ></i>
                 </div>
             </div>
             <div class="description">
