--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -17,6 +17,12 @@
     align-items    : center;
     padding        : 10px;
 
+    .left{
+        .title{
+                font-size: 2rem;
+                font-weight: bold;
+        }
+    }
     .right {
         // border: 1px solid blue;
         display: flex;
@@ -49,7 +55,7 @@
         border-radius: 10px;
         transition: .5s;
         font-size: 1.5rem;
-        font-weight: bold;
+        // font-weight: bold;
         // border         : 1px solid blue;
 
         &:hover {
