--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+p{
+    margin: 0;
+}
+
 :root{
     --igsBlue:#5E56E7;
     --igsDarkgray: #A0A0A0;
@@ -23,4 +27,8 @@ body{
 i{
     cursor: pointer;
     font-size: 1.5rem;
+}
+
+.toast-top-center{
+    top:10px;
 }
