--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -75,6 +75,7 @@
     margin: 10px 0;
     padding: 10px;
     width: 100%;
+    transition: .5s;
 
     &.item-active{
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;;
