--- a/src/app/keep/notes-start/notes-start.component.html
+++ b/src/app/keep/notes-start/notes-start.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="right">
             <div>
-                <input type="text" placeholder="search notes..." [(ngModel)]="searchNoteInput" >
+                <input type="text" placeholder="search notes..." [(ngModel)]="searchNoteInput">
                 <i class="fa fa-search" aria-hidden="true"></i>
             </div>
             <div><i class="fa fa-external-link" aria-hidden="true"></i></div>
@@ -28,65 +28,51 @@
         <button class="btn btn-primary" (click)="onGetAllNotesClick()" >Get All</button>
     </div> -->
 
-    <!-- <app-card-item></app-card-item> -->
-    <div *ngFor="let note of notesList | filterNotes:searchNoteInput">
-        <!-- <p>new note</p> -->
-        <div class="note-item" [ngClass]="{'item-active':note.isActive}"
-        (mouseover)="note.isActive = true"
-        (mouseout)="note.isActive = false"
-        >
+
+    <ng-container *ngIf="!isLoading; else loadingBlock">
+        <div *ngFor="let note of notesList | filterNotes:searchNoteInput">
+            <!-- <p>new note</p> -->
+            <div class="note-item" [ngClass]="{'item-active':note.isActive}" (mouseover)="note.isActive = true"
+                (mouseout)="note.isActive = false">
+                <div class="top">
+                    <div class="title">
+                        <input type="text" [(ngModel)]="note.title" placeholder="Title" (focus)="note.isActive = true"
+                            (focusout)="note.isActive = false"
+                            (ngModelChange)="note.isSaved = false; emptyNoteAdded = false">
+                    </div>
+                    <div class="icons">
+                        <i class="fa fa-trash" title="Delete this note" (click)="onDelete(note)"></i>
+                        <i [ngStyle]="{color:note.isPinned?'#1a73e8':null}" class="fa fa-thumb-tack" title="Pin this note"
+                            (click)="onPinClick(note)"></i>
+                    </div>
+                </div>
+                <div class="description">
+                    <textarea [(ngModel)]="note.description" (focus)="note.isActive = true"
+                        (focusout)="note.isActive = false" (ngModelChange)="note.isSaved = false; emptyNoteAdded=false"
+                        placeholder="take a note..."></textarea>
+                </div>
+                <div class="bottom">
+                    <button class="btn btn-default" (click)="onSaveAllData()">Done</button>
+                    <p *ngIf="!note.isSaved && (note.title.length > 0 || note.description.length>0)"
+                        class="text-danger my-2">Not Saved !</p>
+                </div>
+            </div>
+        </div>
+    </ng-container>
+    <ng-template #loadingBlock>
+        <div class="note-item" *ngFor="let n of [1,2,3,4]">
             <div class="top">
                 <div class="title">
-                    <input type="text" [(ngModel)]="note.title" placeholder="Title"
-                    (focus)="note.isActive = true"
-                    (focusout)="note.isActive = false"
-                    (ngModelChange)="note.isSaved = false; emptyNoteAdded = false"
-                    >
-                </div>
-                <div class="icons">
-                    <i class="fa fa-trash" title="Delete this note" (click)="onDelete(note)"></i>
-                    <i [ngStyle]="{color:note.isPinned?'#1a73e8':null}" 
-                    class="fa fa-thumb-tack"
-                    title="Pin this note"
-                    (click)="onPinClick(note)"
-                    ></i>
+                    <input class="shine" type="text" placeholder="">
                 </div>
             </div>
             <div class="description">
-                <textarea [(ngModel)]="note.description"
-                (focus)="note.isActive = true"
-                (focusout)="note.isActive = false"
-                (ngModelChange)="note.isSaved = false; emptyNoteAdded=false"
-                placeholder="take a note..."
-                ></textarea>
+                <textarea class="shine"></textarea>
             </div>
             <div class="bottom">
-                <button class="btn btn-default" (click)="onSaveAllData()">Done</button>
-                <p *ngIf="!note.isSaved && (note.title.length > 0 || note.description.length>0)"
-                class="text-danger my-2"
-                >Not Saved !</p>
+                <button class="btn btn-default shine" (click)="onSaveAllData()"></button>
+                <!-- <p class="text-danger my-2">Not Saved !</p> -->
             </div>
         </div>
-    </div>
-    <!-- <p>below is hard-coded</p>
-    <div class="note-item">
-        <div class="top">
-            <div class="title">
-                <input type="text" placeholder="Title">
-            </div>
-            <div class="icons">
-                <i class="fa fa-trash"></i>
-                <i 
-                class="fa fa-thumb-tack"
-                ></i>
-            </div>
-        </div>
-        <div class="description">
-            <textarea></textarea>
-        </div>
-        <div class="bottom">
-            <button class="btn btn-default" (click)="onSaveAllData()">Done</button>
-            <p class="text-danger my-2">Not Saved !</p>
-        </div>
-    </div> -->
+    </ng-template>
 </div>
