--- a/src/app/keep/notes-start/notes-start.component.scss
+++ b/src/app/keep/notes-start/notes-start.component.scss
@@ -100,12 +100,12 @@
         width: 100%;
         
         .title{
-            width: 80%;
+            min-width: 80%;
         }
         
         .title input{
             border: none;
-            width: 100%;
+            min-width: 60%;
             transition: .5s;
             font-weight: 600;
             font-size: 1.6rem;
@@ -135,7 +135,7 @@
     
     .description textarea{
         border: none;
-        width: 100%;
+        min-width: 100%;
         min-height: 100px;
         resize: none;
 
@@ -147,6 +147,8 @@
     .bottom button{
         font-weight: 500;
         transition: .5s;
+        min-width: 100px;
+        min-height: 30px;
 
         &:hover{
             background: #C3C3C3;
@@ -154,3 +156,27 @@
         }
     }
 }
+
+.shine {
+    background: #f6f7f8;
+    background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-repeat: no-repeat;
+    background-size: 800px 104px; 
+    display: inline-block;
+    position: relative; 
+    
+    -webkit-animation-duration: 1s;
+    -webkit-animation-fill-mode: forwards; 
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-name: placeholderShimmer;
+    -webkit-animation-timing-function: linear;
+    }
+@keyframes placeholderShimmer {
+    0% {
+      background-position: -468px 0;
+    }
+    
+    100% {
+      background-position: 468px 0; 
+    }
+  }
